--- a/app/templates/friends.html
+++ b/app/templates/friends.html
@@ -123,7 +123,7 @@
 
       <!-- Logout Button -->
       <div class="text-center">
-        <a href="{{ url_for('logout') }}" class="btn btn-danger btn-lg"
+        <a href="{{ url_for('views.logout') }}" class="btn btn-danger btn-lg"
           >Logout</a
         >
       </div>
