--- a/app/templates/add_event_notifications.html
+++ b/app/templates/add_event_notifications.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Ajouter un événement</h1>
-    <form action="{{ url_for('add_event_notifications') }}" method="POST">
+    <form action="{{ url_for('views.add_event_notifications') }}" method="POST">
       <label for="titre">Titre :</label>
       <input type="text" id="titre" name="titre" required /><br /><br />
 
