--- a/app/templates/notifications.html
+++ b/app/templates/notifications.html
@@ -51,6 +51,8 @@
       <p>No notifications yet.</p>
       {% endif %}
     </div>
-    <a href="{{ url_for('add_event_notifications') }}">Back to Event List</a>
+    <a href="{{ url_for('views.add_event_notifications') }}"
+      >Back to Event List</a
+    >
   </body>
 </html>
