backend edit updat work

--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -52,7 +52,7 @@
       <input type="submit" value="Mettre à jour l'événement" />
     </form>
 
-    <a href="{{ url_for('views.add_event_notifications') }}">Retour à la liste des événements</a>
+    <a href="{{ url_for('views.event_calendar') }}">Retour à la liste des événements</a>
   </body>
 </html>
 
