--- a/app/templates/eventcalendar.html
+++ b/app/templates/eventcalendar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -116,6 +116,17 @@
         </p>
         <p><strong>Event Type:</strong> <span id="eventType"></span></p>
         <p><strong>Date:</strong> <span id="eventDate"></span></p>
+        <!-- Placeholder for the delete button -->
+        <a href="#" class="btn btn-danger mb-3" id="updateButton">Edit Event</a>
+        <form id="deleteForm" method="POST" style="display: none">
+          <input type="hidden" name="event_id" id="eventIdInput" />
+          <button type="submit" class="btn btn-danger mb-3">
+            Delete Event
+          </button>
+        </form>
+
+        <!-- Placeholder for displaying the event ID -->
+        <p><strong>Event ID:</strong> <span id="eventId"></span></p>
       </div>
     </div>
 
@@ -143,6 +154,27 @@
               info.event.extendedProps.event_type || "N/A";
             document.getElementById("eventDate").innerText =
               info.event.start.toLocaleString();
+            document.getElementById("eventId").innerText =
+              info.event.extendedProps.event_id || "N/A";
+            document.getElementById("myModal").style.display = "block";
+
+            // Get the event ID
+            var eventId = info.event.extendedProps.event_id;
+
+            // Update the hidden input field for the delete form with the event ID
+            document.getElementById("eventIdInput").value = eventId;
+
+            // Update the delete form's action URL and update button's link
+            var deleteForm = document.getElementById("deleteForm");
+            deleteForm.setAttribute("action", "/delete/" + eventId);
+
+            var updateButton = document.getElementById("updateButton");
+            updateButton.setAttribute("href", "/update/" + eventId);
+
+            // Show the delete form and update button
+            deleteForm.style.display = "block";
+
+            // Show the modal
             document.getElementById("myModal").style.display = "block";
           },
         });
