--- a/app/templates/notifications.html
+++ b/app/templates/notifications.html
@@ -37,6 +37,7 @@
     </style>
   </head>
   <body>
+    {% include "header.html" %}
     <h1>Event Notifications</h1>
     <div>
       {% if notifications %} {% for notification in notifications %}
