--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    {% include "header.html" %}
     <div class="container">
       <h2 class="mt-5">Admin Dashboard</h2>
       <p class="lead">Manage Users</p>
