--- a/app/templates/bac_calc.html
+++ b/app/templates/bac_calc.html
@@ -1,32 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
     <title>Calcul du BAC</title>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='bac_calc.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='header.css') }}"
+    />
+  </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   {% include "header.html" %}
     <h1>Calcul du Taux d'Alcoolémie (BAC)</h1>
     <form method="POST">
-        <label for="volume">Volume de boisson (ml):</label>
-        <input type="number" id="volume" name="volume" required><br>
+      <label for="volume">Volume de boisson (ml):</label>
+      <input type="number" id="volume" name="volume" required /><br />
 
-        <label for="taux_alcool">Taux d'alcool (%):</label>
-        <input type="number" id="taux_alcool" name="taux_alcool" required><br>
+      <label for="taux_alcool">Taux d'alcool (%):</label>
+      <input type="number" id="taux_alcool" name="taux_alcool" required /><br />
 
-        <label for="poids">Poids (kg):</label>
-        <input type="number" id="poids" name="poids" required><br>
+      <label for="poids">Poids (kg):</label>
+      <input type="number" id="poids" name="poids" required /><br />
 
-        <label for="sexe">Sexe:</label>
-        <select id="sexe" name="sexe" required>
-            <option value="Homme">Homme</option>
-            <option value="Femme">Femme</option>
-        </select><br>
+      <label for="sexe">Sexe:</label>
+      <select id="sexe" name="sexe" required>
+        <option value="Homme">Homme</option>
+        <option value="Femme">Femme</option></select
+      ><br />
 
-        <label for="heures">Temps écoulé depuis la consommation (heures):</label>
-        <input type="number" id="heures" name="heures" step="0.1" required><br>
+      <label for="heures">Temps écoulé depuis la consommation (heures):</label>
+      <input
+        type="number"
+        id="heures"
+        name="heures"
+        step="0.1"
+        required
+      /><br />
 
-        <button type="submit">Calculer</button>
+      <button type="submit">Calculer</button>
     </form>
 
     {% if bac is not none %}
@@ -34,5 +59,7 @@
     <p>Taux d'alcoolémie (BAC) : {{ bac|round(3) }} g/L</p>
     <p>Temps nécessaire avant de pouvoir conduire : {{ temps }} heures</p>
     {% endif %}
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
