--- a/app/templates/friends.html
+++ b/app/templates/friends.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    {% include "header.html" %}
     <div class="container mt-5">
       <h1 class="text-center mb-4">User friends</h1>
 
