--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,8 +10,11 @@
     />
   </head>
   <body>
+    {% include "header.html" %}
     <div class="container mt-5">
-      <h1 class="text-center">Welcome to the Touch GlassEvent Management System</h1>
+      <h1 class="text-center">
+        Welcome to the Touch GlassEvent Management System
+      </h1>
 
       <div class="row justify-content-center mt-4">
         <!-- Add Event Button -->
