--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+    {% include "header.html" %}
     <div class="container">
       <h2 class="mt-5">Register</h2>
       <form method="POST">
@@ -121,28 +122,27 @@
             name="music_genre"
             required
           >
-          <option value="">Select a genre...</option>
-          <option value="rock">Rock</option>
-          <option value="pop">Pop</option>
-          <option value="jazz">Jazz</option>
-          <option value="classical">Classical</option>
-          <option value="hiphop">Hip-Hop</option>
-          <option value="country">Country</option>
-          <option value="blues">Blues</option>
-          <option value="electronic">Electronic</option>
-          <option value="metal">Metal</option>
-          <option value="reggae">Reggae</option>
-          <option value="funk">Funk</option>
-          <option value="rnb">R&B</option>
-          <option value="indie">Indie</option>
-          <option value="dance">Dance</option>
-          <option value="punk">Punk</option>
-          <option value="soul">Soul</option>
-          <option value="folk">Folk</option>
-          <option value="techno">Techno</option>
-          <option value="ambient">Ambient</option>
-          <option value="alternative">Alternative</option>
-          
+            <option value="">Select a genre...</option>
+            <option value="rock">Rock</option>
+            <option value="pop">Pop</option>
+            <option value="jazz">Jazz</option>
+            <option value="classical">Classical</option>
+            <option value="hiphop">Hip-Hop</option>
+            <option value="country">Country</option>
+            <option value="blues">Blues</option>
+            <option value="electronic">Electronic</option>
+            <option value="metal">Metal</option>
+            <option value="reggae">Reggae</option>
+            <option value="funk">Funk</option>
+            <option value="rnb">R&B</option>
+            <option value="indie">Indie</option>
+            <option value="dance">Dance</option>
+            <option value="punk">Punk</option>
+            <option value="soul">Soul</option>
+            <option value="folk">Folk</option>
+            <option value="techno">Techno</option>
+            <option value="ambient">Ambient</option>
+            <option value="alternative">Alternative</option>
           </select>
         </div>
 
