--- a/app/templates/user_dashboard.html
+++ b/app/templates/user_dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -53,40 +53,7 @@
     </style>
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Event Management</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/event_calendar">Event Calendar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/bac_calc">BAC Calculator</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    {% include "header.html" %}
     <div class="container">
       <h2 class="mt-5">User Dashboard</h2>
       <p>Welcome, {{ user.user_name }}!</p>
@@ -102,7 +69,10 @@
         </tr>
         <tr>
           <th>Date of Birth</th>
-          <td>{{ user.ddn.strftime('%Y-%m-%d') }}</td>
+          <td>
+            {% if user.ddn %} {{ user.ddn.strftime('%Y-%m-%d') }} {% else %} N/A
+            {% endif %}
+          </td>
         </tr>
         <tr>
           <th>Sex</th>
@@ -150,6 +120,19 @@
         </p>
         <p><strong>Event Type:</strong> <span id="eventType"></span></p>
         <p><strong>Date:</strong> <span id="eventDate"></span></p>
+        <!-- Placeholder for the delete button -->
+        <a href="#" class="btn btn-primary mb-3" id="updateButton"
+          >Edit Event</a
+        >
+        <form id="deleteForm" method="POST" style="display: none">
+          <input type="hidden" name="event_id" id="eventIdInput" />
+          <button type="submit" class="btn btn-danger mb-3">
+            Delete Event
+          </button>
+        </form>
+
+        <!-- Placeholder for displaying the event ID -->
+        <p><strong>Event ID:</strong> <span id="eventId"></span></p>
       </div>
     </div>
 
@@ -177,6 +160,23 @@
               info.event.extendedProps.event_type || "N/A";
             document.getElementById("eventDate").innerText =
               info.event.start.toLocaleString();
+            document.getElementById("eventId").innerText =
+              info.event.extendedProps.event_id || "N/A";
+            document.getElementById("myModal").style.display = "block";
+
+            // Get the event ID
+            var eventId = info.event.extendedProps.event_id;
+            // Update the hidden input field for the delete form with the event ID
+            document.getElementById("eventIdInput").value = eventId;
+            // Update the delete form's action URL and update button's link
+            var deleteForm = document.getElementById("deleteForm");
+            deleteForm.setAttribute("action", "/delete/" + eventId);
+            var updateButton = document.getElementById("updateButton");
+            updateButton.setAttribute("href", "/update/" + eventId);
+            // Show the delete form and update button
+            deleteForm.style.display = "contents";
+
+            // Show the modal
             document.getElementById("myModal").style.display = "block";
           },
         });
